<resources>
    <string name="app_name">Wallet</string>
    <string name="label_password">Password</string>
    <string name="label_forgot_password">Forgot your password?</string>
    <string name="btn_login">Login</string>
    <string name="label_register">Already have an account? Register now</string>
    <string name="label_username">Username</string>
    <string name="tab_dashboards">Dashboards</string>
    <string name="tab_wallets">Wallets</string>
    <string name="tab_info">Info</string>
    <string name="title_activity_wallet">WalletActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="login_failed">"Login failed"</string>
    <string name="menu_item_new_wallet">New Wallet</string>
    <string name="logout">Logout</string>
    <string name="select">Select</string>
    <string name="select_total_currency">Select total currency</string>
    <string name="currency">Currency</string>
    <string name="select_currency">Select currency</string>
    <string name="save">Save</string>
    <string name="amount">Amount</string>
    <string name="name">Name</string>
    <string name="refresh">Refresh</string>
    <string name="available_balance">Available balance</string>
    <string name="low">LOW</string>
    <string name="buy">BUY</string>
    <string name="sell">SELL</string>
    <string name="high">HIGH</string>
    <string name="dolar_blue">DOLLAR BLUE</string>
    <string name="dolar_oficial">DOLLAR OFFICIAL</string>
</resources>